<resources xmlns:tools="http://schemas.android.com/tools">


    <string name="app_name">MyAplication</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_dot">.</string>
    <string name="_minus">-</string>
    <string name="_plus">+</string>
    <string name="_share">/</string>
    <string name="_multiply">*</string>
    <string name="_equals">=</string>
    <string name="_AC">AC</string>
    <string name="_pro">%</string>


    <string name="settings">Settings</string>

    <string name="descriptionLanguage">Language</string>
    <string name="language">English</string>

    <string name="themes">night</string>
    <string name="descriptionNight_themes">themes</string>

    <string name="descriptionOrientation">Orientation</string>
    <string name="orientation">Portland</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="my_cool_style" translatable="false">My cool style</string>
    <string name="material_light" translatable="false">Material light</string>
    <string name="material_light_action_bar_dark" translatable="false">Material light action bar
 dark</string>
    <string name="material_dark" translatable="false">Material dark</string>


</resources>