<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#551FB5"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hapticFeedbackEnabled="false"
        android:text="text"
        android:textSize="@dimen/key_text_size"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button

            android:id="@+id/button0.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/_1"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/_2"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button0.3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/_3"
            android:textSize="@dimen/key_text_size" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button0.4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/_4"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/_5"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button0.6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/_6"
            android:textSize="@dimen/key_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button0.7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/_7"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button0.8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/_8"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button0.9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/_9"
            android:textSize="@dimen/key_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button0.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="4.3"
            android:backgroundTint="@color/teal_700"
            android:text="@string/_0"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/_dot"
            android:textSize="@dimen/key_text_size" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/_minus"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/_plus"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/_equals"
            android:textSize="@dimen/key_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/_percentage"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/_share"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/_multiply"
            android:textSize="@dimen/key_text_size" />


    </LinearLayout>

</LinearLayout>