<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMyCoolStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_cool_style" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_light" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialLightDarkAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_light_action_bar_dark" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_dark" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>